--- a/pom.xml
+++ b/pom.xml
@@ -37,8 +37,8 @@
   </modules>
 
   <scm>
-    <connection>scm:git:git://github.com/danfickle/openhtmltopdf.git</connection>
-    <developerConnection>scm:git:https://github.com/danfickle/openhtmltopdf.git</developerConnection>
+    <connection>scm:git::git@ssh.dev.azure.com:v3/StevenOu0423/openhtmltopdf-pdfbox-bug-test/openhtmltopdf-fork</connection>
+    <developerConnection>scm:git:git@ssh.dev.azure.com:v3/StevenOu0423/openhtmltopdf-pdfbox-bug-test/openhtmltopdf-fork</developerConnection>
     <url>git://github.com/danfickle/openhtmltopdf.git</url>
     <tag>HEAD</tag>
   </scm>
