--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>com.openhtmltopdf</groupId>
   <artifactId>openhtmltopdf-parent</artifactId>
-  <version>1.0.6.1-SNAPSHOT</version>
+  <version>1.0.6.1</version>
 
   <packaging>pom</packaging>
 
@@ -40,7 +40,7 @@
     <connection>scm:git::git@ssh.dev.azure.com:v3/StevenOu0423/openhtmltopdf-pdfbox-bug-test/openhtmltopdf-fork</connection>
     <developerConnection>scm:git:git@ssh.dev.azure.com:v3/StevenOu0423/openhtmltopdf-pdfbox-bug-test/openhtmltopdf-fork</developerConnection>
     <url>git://github.com/danfickle/openhtmltopdf.git</url>
-    <tag>HEAD</tag>
+    <tag>openhtmltopdf-parent-1.0.6.1</tag>
   </scm>
 
   <distributionManagement>
