--- a/openhtmltopdf-rtl-support/pom.xml
+++ b/openhtmltopdf-rtl-support/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.openhtmltopdf</groupId>
     <artifactId>openhtmltopdf-parent</artifactId>
-    <version>1.0.11.snap.1</version>
+    <version>1.0.11.snap.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>openhtmltopdf-rtl-support</artifactId>
